[metadata]
name = cerberus
summary = Cerberus security component
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    cerberus

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = cerberus/locale
domain = cerberus

[update_catalog]
domain = cerberus
output_dir = cerberus/locale
input_file = cerberus/locale/cerberus.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cerberus/locale/cerberus.pot

[entry_points]
console_scripts =
    cerberus-api = cerberus.cmd.api:main
    cerberus-agent = cerberus.cmd.agent:main
    dbcreate = cerberus.cmd.db_create:main
    cerberus-dbsync = cerberus.cmd.dbsync:main

cerberus.plugins =
    testplugin = cerberus.plugins.test_plugin:TestPlugin
    taskplugin = cerberus.plugins.task_plugin:TaskPlugin

oslo.messaging.drivers =
    cerberusdriver = cerberus.common.cerberus_impl_rabbit:CerberusRabbitDriver
